public: 배포 페이지 submodule 추가

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/raditian-free-hugo-theme"]
 	path = themes/raditian-free-hugo-theme
 	url = https://github.com/chewing-git/raditian-free-hugo-theme
+[submodule "public"]
+	path = public
+	url = https://github.com/sul1074/sul1074.github.io
